add a title to the matching visualization cell

--- a/graph-isomorphisms.ipynb
+++ b/graph-isomorphisms.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dbef230e5ad99cd9127e5c699e4c264e5e47712b5e049cf442c3d7bab284d593"
+  "signature": "sha256:47d2363110aa3b5ec8b3561f62aebccc73eaf9b248954f8b87d255fbd699a92a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -580,6 +580,13 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 301
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Visualize the matching"
+     ]
     },
     {
      "cell_type": "code",
